awesomniumc/include/awesomiumc.h


// AK_BACK (08) BACKSPACE key
#define AWE_AK_BACK 0x08
// AK_TAB (09) TAB key
#define AWE_AK_TAB 0x09
// AK_CLEAR (0C) CLEAR key
#define AWE_AK_CLEAR 0x0C
// AK_RETURN (0D)
#define AWE_AK_RETURN 0x0D
// AK_SHIFT (10) SHIFT key
#define AWE_AK_SHIFT 0x10
// AK_CONTROL (11) CTRL key
#define AWE_AK_CONTROL 0x11
// AK_MENU (12) ALT key
#define AWE_AK_MENU 0x12
// AK_PAUSE (13) PAUSE key
#define AWE_AK_PAUSE 0x13
// AK_CAPITAL (14) CAPS LOCK key
#define AWE_AK_CAPITAL 0x14
// AK_KANA (15) Input Method Editor (IME) Kana mode
#define AWE_AK_KANA 0x15
// AK_HANGUEL (15) IME Hanguel mode (maintained for compatibility; use AK_HANGUL)
// AK_HANGUL (15) IME Hangul mode
#define AWE_AK_HANGUL 0x15
// AK_JUNJA (17) IME Junja mode
#define AWE_AK_JUNJA 0x17
// AK_FINAL (18) IME final mode
#define AWE_AK_FINAL 0x18
// AK_HANJA (19) IME Hanja mode
#define AWE_AK_HANJA 0x19
// AK_KANJI (19) IME Kanji mode
#define AWE_AK_KANJI 0x19
// AK_ESCAPE (1B) ESC key
#define AWE_AK_ESCAPE 0x1B
// AK_CONVERT (1C) IME convert
#define AWE_AK_CONVERT 0x1C
// AK_NONCONVERT (1D) IME nonconvert
#define AWE_AK_NONCONVERT 0x1D
// AK_ACCEPT (1E) IME accept
#define AWE_AK_ACCEPT 0x1E
// AK_MODECHANGE (1F) IME mode change request
#define AWE_AK_MODECHANGE 0x1F
// AK_SPACE (20) SPACEBAR
#define AWE_AK_SPACE 0x20
// AK_PRIOR (21) PAGE UP key
#define AWE_AK_PRIOR 0x21
// AK_NEXT (22) PAGE DOWN key
#define AWE_AK_NEXT 0x22
// AK_END (23) END key
#define AWE_AK_END 0x23
// AK_HOME (24) HOME key
#define AWE_AK_HOME 0x24
// AK_LEFT (25) LEFT ARROW key
#define AWE_AK_LEFT 0x25
// AK_UP (26) UP ARROW key
#define AWE_AK_UP 0x26
// AK_RIGHT (27) RIGHT ARROW key
#define AWE_AK_RIGHT 0x27
// AK_DOWN (28) DOWN ARROW key
#define AWE_AK_DOWN 0x28
// AK_SELECT (29) SELECT key
#define AWE_AK_SELECT 0x29
// AK_PRINT (2A) PRINT key
#define AWE_AK_PRINT 0x2A
// AK_EXECUTE (2B) EXECUTE key
#define AWE_AK_EXECUTE 0x2B
// AK_SNAPSHOT (2C) PRINT SCREEN key
#define AWE_AK_SNAPSHOT 0x2C
// AK_INSERT (2D) INS key
#define AWE_AK_INSERT 0x2D
// AK_DELETE (2E) DEL key
#define AWE_AK_DELETE 0x2E
// AK_HELP (2F) HELP key
#define AWE_AK_HELP 0x2F
// (30) 0 key
#define AWE_AK_0 0x30
// (31) 1 key
#define AWE_AK_1 0x31
// (32) 2 key
#define AWE_AK_2 0x32
// (33) 3 key
#define AWE_AK_3 0x33
// (34) 4 key
#define AWE_AK_4 0x34
// (35) 5 key;
#define AWE_AK_5 0x35
// (36) 6 key
#define AWE_AK_6 0x36
// (37) 7 key
#define AWE_AK_7 0x37
// (38) 8 key
#define AWE_AK_8 0x38
// (39) 9 key
#define AWE_AK_9 0x39
// (41) A key
#define AWE_AK_A 0x41
// (42) B key
#define AWE_AK_B 0x42
// (43) C key
#define AWE_AK_C 0x43
// (44) D key
#define AWE_AK_D 0x44
// (45) E key
#define AWE_AK_E 0x45
// (46) F key
#define AWE_AK_F 0x46
// (47) G key
#define AWE_AK_G 0x47
// (48) H key
#define AWE_AK_H 0x48
// (49) I key
#define AWE_AK_I 0x49
// (4A) J key
#define AWE_AK_J 0x4A
// (4B) K key
#define AWE_AK_K 0x4B
// (4C) L key
#define AWE_AK_L 0x4C
// (4D) M key
#define AWE_AK_M 0x4D
// (4E) N key
#define AWE_AK_N 0x4E
// (4F) O key
#define AWE_AK_O 0x4F
// (50) P key
#define AWE_AK_P 0x50
// (51) Q key
#define AWE_AK_Q 0x51
// (52) R key
#define AWE_AK_R 0x52
// (53) S key
#define AWE_AK_S 0x53
// (54) T key
#define AWE_AK_T 0x54
// (55) U key
#define AWE_AK_U 0x55
// (56) V key
#define AWE_AK_V 0x56
// (57) W key
#define AWE_AK_W 0x57
// (58) X key
#define AWE_AK_X 0x58
// (59) Y key
#define AWE_AK_Y 0x59
// (5A) Z key
#define AWE_AK_Z 0x5A
// AK_LWIN (5B) Left Windows key (Microsoft Natural keyboard)
#define AWE_AK_LWIN 0x5B
// AK_RWIN (5C) Right Windows key (Natural keyboard)
#define AWE_AK_RWIN 0x5C
// AK_APPS (5D) Applications key (Natural keyboard)
#define AWE_AK_APPS 0x5D
// AK_SLEEP (5F) Computer Sleep key
#define AWE_AK_SLEEP 0x5F
// AK_NUMPAD0 (60) Numeric keypad 0 key
#define AWE_AK_NUMPAD0 0x60
// AK_NUMPAD1 (61) Numeric keypad 1 key
#define AWE_AK_NUMPAD1 0x61
// AK_NUMPAD2 (62) Numeric keypad 2 key
#define AWE_AK_NUMPAD2 0x62
// AK_NUMPAD3 (63) Numeric keypad 3 key
#define AWE_AK_NUMPAD3 0x63
// AK_NUMPAD4 (64) Numeric keypad 4 key
#define AWE_AK_NUMPAD4 0x64
// AK_NUMPAD5 (65) Numeric keypad 5 key
#define AWE_AK_NUMPAD5 0x65
// AK_NUMPAD6 (66) Numeric keypad 6 key
#define AWE_AK_NUMPAD6 0x66
// AK_NUMPAD7 (67) Numeric keypad 7 key
#define AWE_AK_NUMPAD7 0x67
// AK_NUMPAD8 (68) Numeric keypad 8 key
#define AWE_AK_NUMPAD8 0x68
// AK_NUMPAD9 (69) Numeric keypad 9 key
#define AWE_AK_NUMPAD9 0x69
// AK_MULTIPLY (6A) Multiply key
#define AWE_AK_MULTIPLY 0x6A
// AK_ADD (6B) Add key
#define AWE_AK_ADD 0x6B
// AK_SEPARATOR (6C) Separator key
#define AWE_AK_SEPARATOR 0x6C
// AK_SUBTRACT (6D) Subtract key
#define AWE_AK_SUBTRACT 0x6D
// AK_DECIMAL (6E) Decimal key
#define AWE_AK_DECIMAL 0x6E
// AK_DIVIDE (6F) Divide key
#define AWE_AK_DIVIDE 0x6F
// AK_F1 (70) F1 key
#define AWE_AK_F1 0x70
// AK_F2 (71) F2 key
#define AWE_AK_F2 0x71
// AK_F3 (72) F3 key
#define AWE_AK_F3 0x72
// AK_F4 (73) F4 key
#define AWE_AK_F4 0x73
// AK_F5 (74) F5 key
#define AWE_AK_F5 0x74
// AK_F6 (75) F6 key
#define AWE_AK_F6 0x75
// AK_F7 (76) F7 key
#define AWE_AK_F7 0x76
// AK_F8 (77) F8 key
#define AWE_AK_F8 0x77
// AK_F9 (78) F9 key
#define AWE_AK_F9 0x78
// AK_F10 (79) F10 key
#define AWE_AK_F10 0x79
// AK_F11 (7A) F11 key
#define AWE_AK_F11 0x7A
// AK_F12 (7B) F12 key
#define AWE_AK_F12 0x7B
// AK_F13 (7C) F13 key
#define AWE_AK_F13 0x7C
// AK_F14 (7D) F14 key
#define AWE_AK_F14 0x7D
// AK_F15 (7E) F15 key
#define AWE_AK_F15 0x7E
// AK_F16 (7F) F16 key
#define AWE_AK_F16 0x7F
// AK_F17 (80H) F17 key
#define AWE_AK_F17 0x80
// AK_F18 (81H) F18 key
#define AWE_AK_F18 0x81
// AK_F19 (82H) F19 key
#define AWE_AK_F19 0x82
// AK_F20 (83H) F20 key
#define AWE_AK_F20 0x83
// AK_F21 (84H) F21 key
#define AWE_AK_F21 0x84
// AK_F22 (85H) F22 key
#define AWE_AK_F22 0x85
// AK_F23 (86H) F23 key
#define AWE_AK_F23 0x86
// AK_F24 (87H) F24 key
#define AWE_AK_F24 0x87
// AK_NUMLOCK (90) NUM LOCK key
#define AWE_AK_NUMLOCK 0x90
// AK_SCROLL (91) SCROLL LOCK key
#define AWE_AK_SCROLL 0x91
// AK_LSHIFT (A0) Left SHIFT key
#define AWE_AK_LSHIFT 0xA0
// AK_RSHIFT (A1) Right SHIFT key
#define AWE_AK_RSHIFT 0xA1
// AK_LCONTROL (A2) Left CONTROL key
#define AWE_AK_LCONTROL 0xA2
// AK_RCONTROL (A3) Right CONTROL key
#define AWE_AK_RCONTROL 0xA3
// AK_LMENU (A4) Left MENU key
#define AWE_AK_LMENU 0xA4
// AK_RMENU (A5) Right MENU key
#define AWE_AK_RMENU 0xA5
// AK_BROWSER_BACK (A6) Windows 2000/XP: Browser Back key
#define AWE_AK_BROWSER_BACK 0xA6
// AK_BROWSER_FORWARD (A7) Windows 2000/XP: Browser Forward key
#define AWE_AK_BROWSER_FORWARD 0xA7
// AK_BROWSER_REFRESH (A8) Windows 2000/XP: Browser Refresh key
#define AWE_AK_BROWSER_REFRESH 0xA8
// AK_BROWSER_STOP (A9) Windows 2000/XP: Browser Stop key
#define AWE_AK_BROWSER_STOP 0xA9
// AK_BROWSER_SEARCH (AA) Windows 2000/XP: Browser Search key
#define AWE_AK_BROWSER_SEARCH 0xAA
// AK_BROWSER_FAVORITES (AB) Windows 2000/XP: Browser Favorites key
#define AWE_AK_BROWSER_FAVORITES 0xAB
// AK_BROWSER_HOME (AC) Windows 2000/XP: Browser Start and Home key
#define AWE_AK_BROWSER_HOME 0xAC
// AK_VOLUME_MUTE (AD) Windows 2000/XP: Volume Mute key
#define AWE_AK_VOLUME_MUTE 0xAD
// AK_VOLUME_DOWN (AE) Windows 2000/XP: Volume Down key
#define AWE_AK_VOLUME_DOWN 0xAE
// AK_VOLUME_UP (AF) Windows 2000/XP: Volume Up key
#define AWE_AK_VOLUME_UP 0xAF
// AK_MEDIA_NEXT_TRACK (B0) Windows 2000/XP: Next Track key
#define AWE_AK_MEDIA_NEXT_TRACK 0xB0


	extern EXPORT JSValueC awe_JSValue_newNull();

	extern EXPORT JSValueC awe_JSValue_newBool(int value);

	extern EXPORT JSValueC awe_JSValue_newInt(int value);

	extern EXPORT JSValueC awe_JSValue_newDouble(double value);

	extern EXPORT JSValueC awe_JSValue_newString(const char* value);

	extern EXPORT JSValueC awe_JSValue_newWString(const wchar_t* value);

	extern EXPORT JSValueC awe_JSValue_newObject(ObjectC value);

	extern EXPORT JSValueC awe_JSValue_newArray(ArrayC value);

	extern EXPORT void     awe_JSValue_delete(JSValueC val);

	extern EXPORT int      awe_JSValue_isBoolean(JSValueC val);

	extern EXPORT int      awe_JSValue_isInteger(JSValueC val);

	extern EXPORT int      awe_JSValue_isDouble(JSValueC val);

	extern EXPORT int      awe_JSValue_isNumber(JSValueC val);

	extern EXPORT int      awe_JSValue_isString(JSValueC val);

	extern EXPORT int      awe_JSValue_isArray(JSValueC val);

	extern EXPORT int      awe_JSValue_isObject(JSValueC val);

	extern EXPORT int      awe_JSValue_isNull(JSValueC val);

	extern EXPORT const wchar_t* awe_JSValue_toString(JSValueC val);

	extern EXPORT int      awe_JSValue_toInteger(JSValueC val);

	extern EXPORT double   awe_JSValue_toDouble(JSValueC val);

	extern EXPORT int      awe_JSValue_toBoolean(JSValueC val);

	extern EXPORT ArrayC   awe_JSValue_getArray(JSValueC val);

	extern EXPORT ObjectC  awe_JSValue_getObject(JSValueC val);


	extern EXPORT ObjectC  awe_Object_new();

	extern EXPORT void     awe_Object_delete(ObjectC obj);

	extern EXPORT void     awe_Object_put(ObjectC obj, wchar_t* key, JSValueC val);

	extern EXPORT JSValueC awe_Object_get(ObjectC obj, wchar_t* key);

	extern EXPORT int      awe_Object_contains(ObjectC obj, wchar_t* key);


	extern EXPORT ArrayC   awe_Array_new();

	extern EXPORT void     awe_Array_delete(ArrayC arr);

	extern EXPORT int      awe_Array_size(ArrayC arr);

	extern EXPORT JSValueC awe_Array_get(ArrayC arr, int index);

	extern EXPORT void     awe_Array_add(ArrayC arr, JSValueC val);


	extern EXPORT JSArgumentsC   awe_JSArguments_new();
	
	extern EXPORT void			 awe_JSArguments_delete(JSArgumentsC args);

	extern EXPORT int			 awe_JSArguments_size(JSArgumentsC args);

	extern EXPORT JSValueC		 awe_JSArguments_get(JSArgumentsC args, int index);

	extern EXPORT void			 awe_JSArguments_add(JSArgumentsC args, JSValueC val);