freebasic/awesomium.bi


declare function awe_JSValue_newNull cdecl alias "awe_JSValue_newNull" () as any ptr
declare function awe_JSValue_newBool cdecl alias "awe_JSValue_newBool" (byval value as integer) as any ptr
declare function awe_JSValue_newInt cdecl alias "awe_JSValue_newInt" (byval value as integer) as any ptr
declare function awe_JSValue_newDouble cdecl alias "awe_JSValue_newDouble" (byval value as double) as any ptr
declare function awe_JSValue_newString cdecl alias "awe_JSValue_newString" (byval value as zstring ptr) as any ptr
declare function awe_JSValue_newWString cdecl alias "awe_JSValue_newWString" (byval value as wstring ptr) as any ptr
declare function awe_JSValue_newObject cdecl alias "awe_JSValue_newObject" (byval value as any ptr) as any ptr
declare function awe_JSValue_newArray cdecl alias "awe_JSValue_newArray" (byval value as any ptr) as any ptr
declare sub awe_JSValue_delete cdecl alias "awe_JSValue_delete" (byval val as any ptr)
declare function awe_JSValue_isBoolean cdecl alias "awe_JSValue_isBoolean" (byval val as any ptr) as integer
declare function awe_JSValue_isInteger cdecl alias "awe_JSValue_isInteger" (byval val as any ptr) as integer
declare function awe_JSValue_isDouble cdecl alias "awe_JSValue_isDouble" (byval val as any ptr) as integer
declare function awe_JSValue_isNumber cdecl alias "awe_JSValue_isNumber" (byval val as any ptr) as integer
declare function awe_JSValue_isString cdecl alias "awe_JSValue_isString" (byval val as any ptr) as integer
declare function awe_JSValue_isArray cdecl alias "awe_JSValue_isArray" (byval val as any ptr) as integer
declare function awe_JSValue_isObject cdecl alias "awe_JSValue_isObject" (byval val as any ptr) as integer
declare function awe_JSValue_isNull cdecl alias "awe_JSValue_isNull" (byval val as any ptr) as integer
declare function awe_JSValue_toString cdecl alias "awe_JSValue_toString" (byval val as any ptr) as wstring ptr
declare function awe_JSValue_toInteger cdecl alias "awe_JSValue_toInteger" (byval val as any ptr) as integer
declare function awe_JSValue_toDouble cdecl alias "awe_JSValue_toDouble" (byval val as any ptr) as double
declare function awe_JSValue_toBoolean cdecl alias "awe_JSValue_toBoolean" (byval val as any ptr) as integer
declare function awe_JSValue_getArray cdecl alias "awe_JSValue_getArray" (byval val as any ptr) as any ptr
declare function awe_JSValue_getObject cdecl alias "awe_JSValue_getObject" (byval val as any ptr) as any ptr

declare function awe_Object_new cdecl alias "awe_Object_new" () as any ptr
declare sub awe_Object_delete cdecl alias "awe_Object_delete" (byval obj as any ptr)
declare sub awe_Object_put cdecl alias "awe_Object_put" (byval obj as any ptr, byval key as wstring ptr, byval val as any ptr)
declare function awe_Object_get cdecl alias "awe_Object_get" (byval obj as any ptr, byval key as wstring ptr) as any ptr
declare function awe_Object_contains cdecl alias "awe_Object_contains" (byval obj as any ptr, byval key as wstring ptr) as integer

declare function awe_Array_new cdecl alias "awe_Array_new" () as any ptr
declare sub awe_Array_delete cdecl alias "awe_Array_delete" (byval arr as any ptr)
declare function awe_Array_size cdecl alias "awe_Array_size" (byval arr as any ptr) as integer
declare function awe_Array_get cdecl alias "awe_Array_get" (byval arr as any ptr, byval index as integer) as any ptr
declare sub awe_Array_add cdecl alias "awe_Array_add" (byval arr as any ptr, byval val as any ptr)
declare function awe_JSArguments_new cdecl alias "awe_JSArguments_new" () as any ptr
declare sub awe_JSArguments_delete cdecl alias "awe_JSArguments_delete" (byval args as any ptr)
declare function awe_JSArguments_size cdecl alias "awe_JSArguments_size" (byval args as any ptr) as integer
declare function awe_JSArguments_get cdecl alias "awe_JSArguments_get" (byval args as any ptr, byval index as integer) as any ptr
declare sub awe_JSArguments_add cdecl alias "awe_JSArguments_add" (byval args as any ptr, byval val as any ptr)
end extern

'' AK_BACK (08) BACKSPACE key
#define AWE_AK_BACK &h08

'' AK_TAB (09) TAB key
#define AWE_AK_TAB &h09

'' AK_CLEAR (0C) CLEAR key
#define AWE_AK_CLEAR &h0C

'' AK_RETURN (0D)
#define AWE_AK_RETURN &h0D

'' AK_SHIFT (10) SHIFT key
#define AWE_AK_SHIFT &h10

'' AK_CONTROL (11) CTRL key
#define AWE_AK_CONTROL &h11

'' AK_MENU (12) ALT key
#define AWE_AK_MENU &h12

'' AK_PAUSE (13) PAUSE key
#define AWE_AK_PAUSE &h13

'' AK_CAPITAL (14) CAPS LOCK key
#define AWE_AK_CAPITAL &h14

'' AK_KANA (15) Input Method Editor (IME) Kana mode
#define AWE_AK_KANA &h15

'' AK_HANGUEL (15) IME Hanguel mode (maintained for compatibility; use AK_HANGUL)
'' AK_HANGUL (15) IME Hangul mode
#define AWE_AK_HANGUL &h15

'' AK_JUNJA (17) IME Junja mode
#define AWE_AK_JUNJA &h17

'' AK_FINAL (18) IME final mode
#define AWE_AK_FINAL &h18

'' AK_HANJA (19) IME Hanja mode
#define AWE_AK_HANJA &h19

'' AK_KANJI (19) IME Kanji mode
#define AWE_AK_KANJI &h19

'' AK_ESCAPE (1B) ESC key
#define AWE_AK_ESCAPE &h1B

'' AK_CONVERT (1C) IME convert
#define AWE_AK_CONVERT &h1C

'' AK_NONCONVERT (1D) IME nonconvert
#define AWE_AK_NONCONVERT &h1D

'' AK_ACCEPT (1E) IME accept
#define AWE_AK_ACCEPT &h1E

'' AK_MODECHANGE (1F) IME mode change request
#define AWE_AK_MODECHANGE &h1F

'' AK_SPACE (20) SPACEBAR
#define AWE_AK_SPACE &h20

'' AK_PRIOR (21) PAGE UP key
#define AWE_AK_PRIOR &h21

'' AK_NEXT (22) PAGE DOWN key
#define AWE_AK_NEXT &h22

'' AK_END (23) END key
#define AWE_AK_END &h23

'' AK_HOME (24) HOME key
#define AWE_AK_HOME &h24

'' AK_LEFT (25) LEFT ARROW key
#define AWE_AK_LEFT &h25

'' AK_UP (26) UP ARROW key
#define AWE_AK_UP &h26

'' AK_RIGHT (27) RIGHT ARROW key
#define AWE_AK_RIGHT &h27

'' AK_DOWN (28) DOWN ARROW key
#define AWE_AK_DOWN &h28

'' AK_SELECT (29) SELECT key
#define AWE_AK_SELECT &h29

'' AK_PRINT (2A) PRINT key
#define AWE_AK_PRINT &h2A

'' AK_EXECUTE (2B) EXECUTE key
#define AWE_AK_EXECUTE &h2B

'' AK_SNAPSHOT (2C) PRINT SCREEN key
#define AWE_AK_SNAPSHOT &h2C

'' AK_INSERT (2D) INS key
#define AWE_AK_INSERT &h2D

'' AK_DELETE (2E) DEL key
#define AWE_AK_DELETE &h2E

'' AK_HELP (2F) HELP key
#define AWE_AK_HELP &h2F

'' (30) 0 key
#define AWE_AK_0 &h30

'' (31) 1 key
#define AWE_AK_1 &h31

'' (32) 2 key
#define AWE_AK_2 &h32

'' (33) 3 key
#define AWE_AK_3 &h33

'' (34) 4 key
#define AWE_AK_4 &h34

'' (35) 5 key;
#define AWE_AK_5 &h35

'' (36) 6 key
#define AWE_AK_6 &h36

'' (37) 7 key
#define AWE_AK_7 &h37

'' (38) 8 key
#define AWE_AK_8 &h38

'' (39) 9 key
#define AWE_AK_9 &h39

'' (41) A key
#define AWE_AK_A &h41

'' (42) B key
#define AWE_AK_B &h42

'' (43) C key
#define AWE_AK_C &h43

'' (44) D key
#define AWE_AK_D &h44

'' (45) E key
#define AWE_AK_E &h45

'' (46) F key
#define AWE_AK_F &h46

'' (47) G key
#define AWE_AK_G &h47

'' (48) H key
#define AWE_AK_H &h48

'' (49) I key
#define AWE_AK_I &h49

'' (4A) J key
#define AWE_AK_J &h4A

'' (4B) K key
#define AWE_AK_K &h4B

'' (4C) L key
#define AWE_AK_L &h4C

'' (4D) M key
#define AWE_AK_M &h4D

'' (4E) N key
#define AWE_AK_N &h4E

'' (4F) O key
#define AWE_AK_O &h4F

'' (50) P key
#define AWE_AK_P &h50

'' (51) Q key
#define AWE_AK_Q &h51

'' (52) R key
#define AWE_AK_R &h52

'' (53) S key
#define AWE_AK_S &h53

'' (54) T key
#define AWE_AK_T &h54

'' (55) U key
#define AWE_AK_U &h55

'' (56) V key
#define AWE_AK_V &h56

'' (57) W key
#define AWE_AK_W &h57

'' (58) X key
#define AWE_AK_X &h58

'' (59) Y key
#define AWE_AK_Y &h59

'' (5A) Z key
#define AWE_AK_Z &h5A

'' AK_LWIN (5B) Left Windows key (Microsoft Natural keyboard)
#define AWE_AK_LWIN &h5B

'' AK_RWIN (5C) Right Windows key (Natural keyboard)
#define AWE_AK_RWIN &h5C

'' AK_APPS (5D) Applications key (Natural keyboard)
#define AWE_AK_APPS &h5D

'' AK_SLEEP (5F) Computer Sleep key
#define AWE_AK_SLEEP &h5F

'' AK_NUMPAD0 (60) Numeric keypad 0 key
#define AWE_AK_NUMPAD0 &h60

'' AK_NUMPAD1 (61) Numeric keypad 1 key
#define AWE_AK_NUMPAD1 &h61

'' AK_NUMPAD2 (62) Numeric keypad 2 key
#define AWE_AK_NUMPAD2 &h62

'' AK_NUMPAD3 (63) Numeric keypad 3 key
#define AWE_AK_NUMPAD3 &h63

'' AK_NUMPAD4 (64) Numeric keypad 4 key
#define AWE_AK_NUMPAD4 &h64

'' AK_NUMPAD5 (65) Numeric keypad 5 key
#define AWE_AK_NUMPAD5 &h65

'' AK_NUMPAD6 (66) Numeric keypad 6 key
#define AWE_AK_NUMPAD6 &h66

'' AK_NUMPAD7 (67) Numeric keypad 7 key
#define AWE_AK_NUMPAD7 &h67

'' AK_NUMPAD8 (68) Numeric keypad 8 key
#define AWE_AK_NUMPAD8 &h68

'' AK_NUMPAD9 (69) Numeric keypad 9 key
#define AWE_AK_NUMPAD9 &h69

'' AK_MULTIPLY (6A) Multiply key
#define AWE_AK_MULTIPLY &h6A

'' AK_ADD (6B) Add key
#define AWE_AK_ADD &h6B

'' AK_SEPARATOR (6C) Separator key
#define AWE_AK_SEPARATOR &h6C

'' AK_SUBTRACT (6D) Subtract key
#define AWE_AK_SUBTRACT &h6D

'' AK_DECIMAL (6E) Decimal key
#define AWE_AK_DECIMAL &h6E

'' AK_DIVIDE (6F) Divide key
#define AWE_AK_DIVIDE &h6F

'' AK_F1 (70) F1 key
#define AWE_AK_F1 &h70

'' AK_F2 (71) F2 key
#define AWE_AK_F2 &h71

'' AK_F3 (72) F3 key
#define AWE_AK_F3 &h72

'' AK_F4 (73) F4 key
#define AWE_AK_F4 &h73

'' AK_F5 (74) F5 key
#define AWE_AK_F5 &h74

'' AK_F6 (75) F6 key
#define AWE_AK_F6 &h75

'' AK_F7 (76) F7 key
#define AWE_AK_F7 &h76

'' AK_F8 (77) F8 key
#define AWE_AK_F8 &h77

'' AK_F9 (78) F9 key
#define AWE_AK_F9 &h78

'' AK_F10 (79) F10 key
#define AWE_AK_F10 &h79

'' AK_F11 (7A) F11 key
#define AWE_AK_F11 &h7A

'' AK_F12 (7B) F12 key
#define AWE_AK_F12 &h7B

'' AK_F13 (7C) F13 key
#define AWE_AK_F13 &h7C

'' AK_F14 (7D) F14 key
#define AWE_AK_F14 &h7D

'' AK_F15 (7E) F15 key
#define AWE_AK_F15 &h7E

'' AK_F16 (7F) F16 key
#define AWE_AK_F16 &h7F

'' AK_F17 (80H) F17 key
#define AWE_AK_F17 &h80

'' AK_F18 (81H) F18 key
#define AWE_AK_F18 &h81

'' AK_F19 (82H) F19 key
#define AWE_AK_F19 &h82

'' AK_F20 (83H) F20 key
#define AWE_AK_F20 &h83

'' AK_F21 (84H) F21 key
#define AWE_AK_F21 &h84

'' AK_F22 (85H) F22 key
#define AWE_AK_F22 &h85

'' AK_F23 (86H) F23 key
#define AWE_AK_F23 &h86

'' AK_F24 (87H) F24 key
#define AWE_AK_F24 &h87

'' AK_NUMLOCK (90) NUM LOCK key
#define AWE_AK_NUMLOCK &h90

'' AK_SCROLL (91) SCROLL LOCK key
#define AWE_AK_SCROLL &h91

'' AK_LSHIFT (A0) Left SHIFT key
#define AWE_AK_LSHIFT &hA0

'' AK_RSHIFT (A1) Right SHIFT key
#define AWE_AK_RSHIFT &hA1

'' AK_LCONTROL (A2) Left CONTROL key
#define AWE_AK_LCONTROL &hA2

'' AK_RCONTROL (A3) Right CONTROL key
#define AWE_AK_RCONTROL &hA3

'' AK_LMENU (A4) Left MENU key
#define AWE_AK_LMENU &hA4

'' AK_RMENU (A5) Right MENU key
#define AWE_AK_RMENU &hA5

'' AK_BROWSER_BACK (A6) Windows 2000/XP: Browser Back key
#define AWE_AK_BROWSER_BACK &hA6

'' AK_BROWSER_FORWARD (A7) Windows 2000/XP: Browser Forward key
#define AWE_AK_BROWSER_FORWARD &hA7

'' AK_BROWSER_REFRESH (A8) Windows 2000/XP: Browser Refresh key
#define AWE_AK_BROWSER_REFRESH &hA8

'' AK_BROWSER_STOP (A9) Windows 2000/XP: Browser Stop key
#define AWE_AK_BROWSER_STOP &hA9

'' AK_BROWSER_SEARCH (AA) Windows 2000/XP: Browser Search key
#define AWE_AK_BROWSER_SEARCH &hAA

'' AK_BROWSER_FAVORITES (AB) Windows 2000/XP: Browser Favorites key
#define AWE_AK_BROWSER_FAVORITES &hAB

'' AK_BROWSER_HOME (AC) Windows 2000/XP: Browser Start and Home key
#define AWE_AK_BROWSER_HOME &hAC

'' AK_VOLUME_MUTE (AD) Windows 2000/XP: Volume Mute key
#define AWE_AK_VOLUME_MUTE &hAD

'' AK_VOLUME_DOWN (AE) Windows 2000/XP: Volume Down key
#define AWE_AK_VOLUME_DOWN &hAE

'' AK_VOLUME_UP (AF) Windows 2000/XP: Volume Up key
#define AWE_AK_VOLUME_UP &hAF

'' AK_MEDIA_NEXT_TRACK (B0) Windows 2000/XP: Next Track key
#define AWE_AK_MEDIA_NEXT_TRACK &hB0
